several changes/additions:
* Renamed socket.c to socket-client.c
* Implemented server in socket-server.c
* Added server target to cmake
* Command arguments are now resolved using getopt routine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.0)
 
 project(sock VERSION 1.0 LANGUAGES C)
 
-add_executable(socket socket.c)
+add_executable(socket-client socket-client.c)
 
-install(TARGETS socket DESTINATION bin)
+add_executable(socket-server socket-server.c)
+
+install(TARGETS socket-client DESTINATION bin)
+
+install(TARGETS socket-server DESTINATION bin)
